--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "weather-check",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://007Harshvardhan.github.io/weather-check",
+  "homepage": "https://github.com/007Harshvardhan/Classy-Weather",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
